# ChessByDQK

./: BoardDisplay.py  CMakeLists.txt  ChessEngine.py  ChessEngineNb.py  ChessMain.py  ChessMain.spec  InspectSave.py  ReplayViewer.py  SmartMoveFinder.py  SmartMoveFindernumba.py  chess_engine.cpp
Release/: chess_engine.exp  chess_engine.lib  chess_engine.pyd
__pycache__/: SmartMoveFindernumba.calculate_move_score-412.py312.1.nbc  SmartMoveFindernumba.calculate_move_score-412.py312.nbi  SmartMoveFindernumba.evaluate_king_safety-159.py312.1.nbc  SmartMoveFindernumba.evaluate_king_safety-159.py312.nbi  SmartMoveFindernumba.evaluate_pawn_structure-182.py312.1.nbc  SmartMoveFindernumba.evaluate_pawn_structure-182.py312.nbi  SmartMoveFindernumba.getPiecePositionScore-107.py312.1.nbc  SmartMoveFindernumba.getPiecePositionScore-107.py312.nbi  SmartMoveFindernumba.score_board_numba-221.py312.1.nbc  SmartMoveFindernumba.score_board_numba-221.py312.nbi
saved_games/: 2025-05-15_23-30-29.pkl  2025-05-16_08-47-26.pkl  2025-05-16_10-22-23.pkl  2025-05-16_15-23-59.pkl  2025-05-16_15-30-20.pkl  2025-05-16_15-42-20.pkl  2025-05-16_18-24-41.pkl  2025-05-16_20-10-57.pkl
saved_games/Guest/: 2025-05-16_15-19-44.pkl  2025-05-18_13-54-56.pkl  2025-05-18_13-56-01.pkl  2025-05-18_14-47-19.pkl  2025-05-18_14-48-31.pkl  2025-05-18_15-00-54.pkl  2025-05-18_15-01-30.pkl
